force-app/main/default/objects/MA_Link_Event__c/MA_Link_Event__c.object-meta.xml
<CustomObject>
    <label>MA Link Event</label>
    <pluralLabel>MA Link Events</pluralLabel>
    <nameField>
        <label>Event Name</label>
        <type>AutoNumber</type>
        <displayFormat>EVT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Records prospect activity on shared engagement links: page views, form interactions, and submissions.</description>
</CustomObject>