force-app/main/default/objects/MA_Link_Event__c/fields/Assessment_Request__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Request__c</fullName>
    <label>Assessment Request</label>
    <type>Lookup</type>
    <referenceTo>MA_Assessment_Request__c</referenceTo>
    <relationshipLabel>Link Events</relationshipLabel>
    <relationshipName>Link_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>