force-app/main/default/objects/MA_Link_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Page View</fullName><default>false</default><label>Page View</label></value>
            <value><fullName>Form Opened</fullName><default>false</default><label>Form Opened</label></value>
            <value><fullName>Form Submitted</fullName><default>false</default><label>Form Submitted</label></value>
            <value><fullName>Drop-off</fullName><default>false</default><label>Drop-off</label></value>
            <value>
                <fullName>Section Viewed</fullName>
            </value>
            <value>
                <fullName>CTA Clicked</fullName>
            </value>
            <value>
                <fullName>Form Field</fullName>
            </value>
            <value>
                <fullName>Form Resumed</fullName>
            </value>
            <value>
                <fullName>Session End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>