force-app/main/default/objects/MA_Link_Event__c/fields/Saved_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Saved_Configuration__c</fullName>
    <label>Saved Configuration</label>
    <type>Lookup</type>
    <referenceTo>MA_Saved_Configuration__c</referenceTo>
    <relationshipLabel>Link Events</relationshipLabel>
    <relationshipName>Link_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>